--- a/household_main/templates/household_main/base.html
+++ b/household_main/templates/household_main/base.html
@@ -76,6 +76,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'book_club:books_by_category' %}">Books</a>
         </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'gaming:games_by_category' %}">Games</a>
+        </li>
       </ul>
 
 
