--- a/book_club/templates/book_club/update_book_tracker_entry.html
+++ b/book_club/templates/book_club/update_book_tracker_entry.html
@@ -18,7 +18,7 @@
           <input type="range" class="form-range" id="wordSlider" min="0" max="{{ book.words }}" value="{{ form.words_completed.value }}" step="1">
           {{ form.words_completed }}
         </div>
-        <button type="submit" class="btn btn-primary">💾 Update</button>
+        <button type="submit" class="btn btn-primary">🕮 Update</button>
       </form>
     </div>
   </div>
