--- a/household_main/templates/household_main/notes.html
+++ b/household_main/templates/household_main/notes.html
@@ -1,7 +1,7 @@
 {% extends 'household_main/base.html' %}
 
 {% block page_header %}
-  <h1>Notes</h1>
+  <h1>📓 Notes</h1>
 {% endblock page_header %}
 
 {% block content %}
