--- a/scheduling/templates/scheduling/todo_calendar.html
+++ b/scheduling/templates/scheduling/todo_calendar.html
@@ -3,7 +3,7 @@
 {% load group_tags %}
 
 {% block page_header %}
-  <h1>To-Do Calendar</h1>
+  <h1>🗓️ To-Do Calendar</h1>
 {% endblock page_header %}
 
 {% block content %}
