--- a/book_club/templates/book_club/books.html
+++ b/book_club/templates/book_club/books.html
@@ -1,7 +1,7 @@
 {% extends 'household_main/base.html' %}
 
 {% block page_header %}
-  <h1>Books</h1>
+  <h1>📚 Books</h1>
 {% endblock page_header %}
 
 {% block content %}
@@ -10,7 +10,7 @@
     {% for book in books %}
       <li class="list-group-item border-0">
         <a href="{% url 'book_club:book' book.id %}">
-          {{ book.text }}</a>
+          {{ book.title }}</a>
           <div class="card-body">{{ book.words|linebreaks }}</div>
       </li>
     {% empty %}
