--- a/book_club/templates/book_club/new_book_tracker_entry.html
+++ b/book_club/templates/book_club/new_book_tracker_entry.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>📘 Track Book Progress</title>
+  <title>🕮 Track Book Progress</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body class="bg-dark text-light">
