--- a/chores/templates/chores/chores_by_category.html
+++ b/chores/templates/chores/chores_by_category.html
@@ -1,7 +1,7 @@
 {% extends 'household_main/base.html' %}
 
 {% block page_header %}
-  <h1>Chores</h1>
+  <h1>🧹 Chores</h1>
 {% endblock page_header %}
 
 {% block content %}
