--- a/gaming/templates/gaming/add_new_game.html
+++ b/gaming/templates/gaming/add_new_game.html
@@ -11,9 +11,9 @@
     <label for="api-select" class="mt-2">Select Source:</label>
     <select id="api-select" class="form-control">
         <option value="igdb">IGDB</option>
-        <option value="steam">Steam</option>
-        <option value="trueachievements">TrueAchievements</option>
-        <option value="retroachievements">RetroAchievements</option>
+{#        <option value="steam">Steam</option>#}
+{#        <option value="trueachievements">TrueAchievements</option>#}
+{#        <option value="retroachievements">RetroAchievements</option>#}
     </select>
 
     <button type="submit" class="btn btn-primary mt-3">Search</button>
